// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream 1`] = `"($R=>$R[0]=_$.S())($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream 2`] = `"($R=>_$.Se($R[0],\\"foo\\"))($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream 3`] = `"($R=>_$.Se($R[0],\\"bar\\"))($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream 4`] = `"($R=>_$.Se($R[0],\\"baz\\"))($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream 5`] = `"($R=>_$.Sc($R[0]))($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream errors 1`] = `"($R=>$R[0]=_$.S())($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > scoped > supports ReadableStream errors 2`] = `"($R=>_$.St($R[0],$R[1]=Object.assign(new Error(\\"Oops!\\"),{stack:\\"\\"})))($R[\\"example\\"])"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream 1`] = `"$R[0]=_$.S()"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream 2`] = `"_$.Se($R[0],\\"foo\\")"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream 3`] = `"_$.Se($R[0],\\"bar\\")"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream 4`] = `"_$.Se($R[0],\\"baz\\")"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream 5`] = `"_$.Sc($R[0])"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream errors 1`] = `"$R[0]=_$.S()"`;

exports[`ReadableStream > crossSerializeStream > supports ReadableStream errors 2`] = `"_$.St($R[0],$R[1]=Object.assign(new Error(\\"Oops!\\"),{stack:\\"\\"}))"`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream 1`] = `
{
  "a": undefined,
  "b": undefined,
  "c": undefined,
  "e": undefined,
  "f": undefined,
  "i": 0,
  "l": undefined,
  "m": undefined,
  "o": undefined,
  "p": undefined,
  "s": undefined,
  "t": 31,
  "x": undefined,
}
`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream 2`] = `
{
  "a": undefined,
  "b": undefined,
  "c": undefined,
  "e": undefined,
  "f": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "e": undefined,
    "f": undefined,
    "i": undefined,
    "l": undefined,
    "m": undefined,
    "o": undefined,
    "p": undefined,
    "s": "foo",
    "t": 1,
    "x": undefined,
  },
  "i": 0,
  "l": undefined,
  "m": undefined,
  "o": undefined,
  "p": undefined,
  "s": undefined,
  "t": 32,
  "x": undefined,
}
`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream 3`] = `
{
  "a": undefined,
  "b": undefined,
  "c": undefined,
  "e": undefined,
  "f": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "e": undefined,
    "f": undefined,
    "i": undefined,
    "l": undefined,
    "m": undefined,
    "o": undefined,
    "p": undefined,
    "s": "bar",
    "t": 1,
    "x": undefined,
  },
  "i": 0,
  "l": undefined,
  "m": undefined,
  "o": undefined,
  "p": undefined,
  "s": undefined,
  "t": 32,
  "x": undefined,
}
`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream 4`] = `
{
  "a": undefined,
  "b": undefined,
  "c": undefined,
  "e": undefined,
  "f": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "e": undefined,
    "f": undefined,
    "i": undefined,
    "l": undefined,
    "m": undefined,
    "o": undefined,
    "p": undefined,
    "s": "baz",
    "t": 1,
    "x": undefined,
  },
  "i": 0,
  "l": undefined,
  "m": undefined,
  "o": undefined,
  "p": undefined,
  "s": undefined,
  "t": 32,
  "x": undefined,
}
`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream 5`] = `
{
  "a": undefined,
  "b": undefined,
  "c": undefined,
  "e": undefined,
  "f": undefined,
  "i": 0,
  "l": undefined,
  "m": undefined,
  "o": undefined,
  "p": undefined,
  "s": undefined,
  "t": 33,
  "x": undefined,
}
`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream errors 1`] = `"{\\"t\\":31,\\"i\\":0}"`;

exports[`ReadableStream > toCrossJSONStream > supports ReadableStream errors 2`] = `"{\\"t\\":34,\\"i\\":0,\\"f\\":{\\"t\\":13,\\"i\\":1,\\"s\\":0,\\"m\\":\\"Oops!\\",\\"p\\":{\\"k\\":[\\"stack\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"\\"}],\\"s\\":1}}}"`;
